<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="265dp"
        android:layout_height="51dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="16pt"
        android:layout_marginEnd="49dp"
        android:layout_marginBottom="10dp"
        android:text="@string/input_data_barang"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="352dp"
        android:layout_below="@+id/textView"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="392dp">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="171dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/nama_barang"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/masukkan_nama_barang"
                android:inputType="textPersonName" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/harga_barang"

                android:textSize="18sp" />

            <EditText
                android:id="@+id/editText3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/masukkan_harga_barang"
                android:inputType="textPassword"
                android:textColor="#E91E63"
                android:autofillHints="" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/jumlah_barang"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:autofillHints=""
                android:hint="@string/masukkan_jumlah_barang"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="10dp"
                android:text="@string/input"
                android:textColor="#03A9F4"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="15dp"
                android:text="@string/hapus"
                android:textColor="#E91E63"
                style="?android:attr/buttonBarButtonStyle"
                />

        </TableRow>

    </TableLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="271dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="120dp">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="240dp"
            android:layout_height="240dp"
            android:layout_marginStart="84dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/todo"
            app:srcCompat="@drawable/yusuf"
            tools:srcCompat="@drawable/yusuf" />

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="13dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="206dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/muhammad_yusuf_ardiansyah"
            android:textColor="#673AB7"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:textStyle="bold" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="61dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/_18082010001"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView6"
            app:layout_constraintTop_toTopOf="parent"
            tools:textStyle="bold" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="182dp"
            android:layout_height="50dp"
            android:layout_marginStart="177dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="176dp"
            android:text="@string/sistem_informasi_18_upn_veteran_jatim"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:textStyle="bold" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</RelativeLayout>